target/generated-sources/antlr4/SenseParser.java
// Generated from Sense.g4 by ANTLR 4.13.1

package com.grammar.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SenseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, INT=30, FLOAT=31, BOOLEAN=32, 
		STRING=33, FUNCTION=34, ID=35, ID_PATH=36, MACROARG=37, NAMESPACE=38, 
		LINECOMMENT=39, BLOCKCOMMENT=40, SPACES=41, SCRIPT=42, REGEX=43;
	public static final int
		RULE_sense = 0, RULE_nsSentence = 1, RULE_importSentence = 2, RULE_scriptSentence = 3, 
		RULE_primeSentence = 4, RULE_macroSentence = 5, RULE_productionSentence = 6, 
		RULE_exclusion = 7, RULE_annotation = 8, RULE_assigns = 9, RULE_assign = 10, 
		RULE_criteria = 11, RULE_catExpr = 12, RULE_catUnit = 13, RULE_catBranch = 14, 
		RULE_cat = 15, RULE_wordAttrExpr = 16, RULE_wordAttrBranch = 17, RULE_wordAttr = 18, 
		RULE_wordAttrUnit = 19, RULE_value = 20, RULE_array = 21, RULE_dict = 22, 
		RULE_dictItem = 23, RULE_expr = 24, RULE_unit = 25, RULE_idList = 26, 
		RULE_qualifiedName = 27, RULE_namespace = 28, RULE_rep = 29, RULE_repUnit = 30, 
		RULE_branch = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"sense", "nsSentence", "importSentence", "scriptSentence", "primeSentence", 
			"macroSentence", "productionSentence", "exclusion", "annotation", "assigns", 
			"assign", "criteria", "catExpr", "catUnit", "catBranch", "cat", "wordAttrExpr", 
			"wordAttrBranch", "wordAttr", "wordAttrUnit", "value", "array", "dict", 
			"dictItem", "expr", "unit", "idList", "qualifiedName", "namespace", "rep", 
			"repUnit", "branch"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'namespace'", "';'", "'import'", "'::'", "','", "':'", "'<'", 
			"'>'", "'('", "')'", "'!'", "'@'", "'='", "'['", "']'", "'&'", "'|'", 
			"'*'", "'{'", "'}'", "'^'", "'=='", "'!='", "'<*'", "'.'", "'${'", "'~'", 
			"'+'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "INT", "FLOAT", "BOOLEAN", "STRING", 
			"FUNCTION", "ID", "ID_PATH", "MACROARG", "NAMESPACE", "LINECOMMENT", 
			"BLOCKCOMMENT", "SPACES", "SCRIPT", "REGEX"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sense.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SenseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SenseContext extends ParserRuleContext {
		public NsSentenceContext nsSentence() {
			return getRuleContext(NsSentenceContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SenseParser.EOF, 0); }
		public List<ImportSentenceContext> importSentence() {
			return getRuleContexts(ImportSentenceContext.class);
		}
		public ImportSentenceContext importSentence(int i) {
			return getRuleContext(ImportSentenceContext.class,i);
		}
		public List<ScriptSentenceContext> scriptSentence() {
			return getRuleContexts(ScriptSentenceContext.class);
		}
		public ScriptSentenceContext scriptSentence(int i) {
			return getRuleContext(ScriptSentenceContext.class,i);
		}
		public List<PrimeSentenceContext> primeSentence() {
			return getRuleContexts(PrimeSentenceContext.class);
		}
		public PrimeSentenceContext primeSentence(int i) {
			return getRuleContext(PrimeSentenceContext.class,i);
		}
		public List<MacroSentenceContext> macroSentence() {
			return getRuleContexts(MacroSentenceContext.class);
		}
		public MacroSentenceContext macroSentence(int i) {
			return getRuleContext(MacroSentenceContext.class,i);
		}
		public List<ProductionSentenceContext> productionSentence() {
			return getRuleContexts(ProductionSentenceContext.class);
		}
		public ProductionSentenceContext productionSentence(int i) {
			return getRuleContext(ProductionSentenceContext.class,i);
		}
		public SenseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sense; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterSense(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitSense(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitSense(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SenseContext sense() throws RecognitionException {
		SenseContext _localctx = new SenseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sense);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			nsSentence();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(65);
				importSentence();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 51539611776L) != 0)) {
				{
				setState(75);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(71);
					scriptSentence();
					}
					break;
				case 2:
					{
					setState(72);
					primeSentence();
					}
					break;
				case 3:
					{
					setState(73);
					macroSentence();
					}
					break;
				case 4:
					{
					setState(74);
					productionSentence();
					}
					break;
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NsSentenceContext extends ParserRuleContext {
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public NsSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nsSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterNsSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitNsSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitNsSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NsSentenceContext nsSentence() throws RecognitionException {
		NsSentenceContext _localctx = new NsSentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nsSentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__0);
			setState(83);
			namespace();
			setState(84);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportSentenceContext extends ParserRuleContext {
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(SenseParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SenseParser.ID, i);
		}
		public ImportSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterImportSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitImportSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitImportSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportSentenceContext importSentence() throws RecognitionException {
		ImportSentenceContext _localctx = new ImportSentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importSentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__2);
			{
			setState(87);
			namespace();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(88);
				match(T__3);
				setState(89);
				match(ID);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(90);
					match(T__4);
					setState(91);
					match(ID);
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
			setState(99);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptSentenceContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(SenseParser.FUNCTION, 0); }
		public TerminalNode SCRIPT() { return getToken(SenseParser.SCRIPT, 0); }
		public ScriptSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterScriptSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitScriptSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitScriptSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptSentenceContext scriptSentence() throws RecognitionException {
		ScriptSentenceContext _localctx = new ScriptSentenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_scriptSentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(FUNCTION);
			setState(102);
			match(T__5);
			setState(103);
			match(SCRIPT);
			setState(104);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimeSentenceContext extends ParserRuleContext {
		public Token name;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(SenseParser.ID, 0); }
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public CriteriaContext criteria() {
			return getRuleContext(CriteriaContext.class,0);
		}
		public ExclusionContext exclusion() {
			return getRuleContext(ExclusionContext.class,0);
		}
		public PrimeSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primeSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterPrimeSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitPrimeSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitPrimeSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimeSentenceContext primeSentence() throws RecognitionException {
		PrimeSentenceContext _localctx = new PrimeSentenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primeSentence);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(106);
					annotation();
					}
					} 
				}
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(112);
				criteria();
				}
			}

			setState(115);
			match(T__6);
			setState(116);
			((PrimeSentenceContext)_localctx).name = match(ID);
			setState(117);
			match(T__7);
			setState(118);
			match(T__5);
			setState(119);
			expr();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(120);
				exclusion();
				}
			}

			setState(123);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MacroSentenceContext extends ParserRuleContext {
		public Token name;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(SenseParser.ID, 0); }
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public MacroSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macroSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterMacroSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitMacroSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitMacroSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MacroSentenceContext macroSentence() throws RecognitionException {
		MacroSentenceContext _localctx = new MacroSentenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_macroSentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(125);
				annotation();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			((MacroSentenceContext)_localctx).name = match(ID);
			setState(132);
			match(T__8);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(133);
				idList();
				}
			}

			setState(136);
			match(T__9);
			setState(137);
			match(T__5);
			setState(138);
			expr();
			setState(139);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProductionSentenceContext extends ParserRuleContext {
		public Token name;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(SenseParser.ID, 0); }
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public ExclusionContext exclusion() {
			return getRuleContext(ExclusionContext.class,0);
		}
		public ProductionSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_productionSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterProductionSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitProductionSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitProductionSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProductionSentenceContext productionSentence() throws RecognitionException {
		ProductionSentenceContext _localctx = new ProductionSentenceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_productionSentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(141);
				annotation();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			((ProductionSentenceContext)_localctx).name = match(ID);
			setState(148);
			match(T__5);
			setState(149);
			expr();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(150);
				exclusion();
				}
			}

			setState(153);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExclusionContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExclusionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exclusion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterExclusion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitExclusion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitExclusion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExclusionContext exclusion() throws RecognitionException {
		ExclusionContext _localctx = new ExclusionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exclusion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(T__10);
			setState(156);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnnotationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SenseParser.ID, 0); }
		public AssignsContext assigns() {
			return getRuleContext(AssignsContext.class,0);
		}
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_annotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(T__11);
			setState(159);
			match(ID);
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(160);
				assigns();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignsContext extends ParserRuleContext {
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public AssignsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assigns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterAssigns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitAssigns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitAssigns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignsContext assigns() throws RecognitionException {
		AssignsContext _localctx = new AssignsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assigns);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__8);
			setState(164);
			assign();
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(165);
				match(T__4);
				setState(166);
				assign();
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SenseParser.ID, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(ID);
			setState(175);
			match(T__12);
			setState(176);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CriteriaContext extends ParserRuleContext {
		public CatExprContext catExpr() {
			return getRuleContext(CatExprContext.class,0);
		}
		public CriteriaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criteria; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterCriteria(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitCriteria(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitCriteria(this);
			else return visitor.visitChildren(this);
		}
	}
